lombok works now